# cartridge-cli

./: .gitignore  .gitlab-ci.yml  .goreleaser.yml  .luacheckrc  AUTHORS  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.cache  Dockerfile.releaser  Dockerfile.tarantoolapp  Makefile  README.dev.md  README.md  README.rst  Vagrantfile  cartridge  cartridge-cli-scm-1.rockspec  cartridge-cli.lua  compile_executable.lua  generate_binary.py  go.mod  go.sum  install_tarantool1.sh  install_tarantool2.sh  magefile.common.go  magefile.go  magefile.publish.go  main.go  pytest.ini  run-unit.sh  tarantoolapp  tarantoolapp-scm-1.rockspec  test-e2e.sh  test_compiling.sh  wrapdocker
.github/: pull_request_template.md
.github/workflows/: bump-homebrew-formula.yml  pull-translation.yml  push-translation.yml  release.yml  tests.yml  upload-translations.yml
build_project/: build.go  local.go  post_build.go
cartridge-cli/: VERSION.lua  VERSION.lua.in  argparse.lua  templates.lua  utils.lua
cli/: main.go
cli/admin/: admin.go  call.go  common.go  common_test.go  help.go  list.go  utils.go
cli/bench/: bench.go  cluster.go  config.go  connection.go  one_instance.go  requests.go  space.go  types.go  utils.go
cli/cluster/: cluster.go  instances.go  membership.go
cli/codegen/: generate.go  generate_code.go  generate_mode.go  generate_templates_vfs.go  generate_vfs.go
cli/commands/: admin.go  bench.go  build.go  cartridge.go  clean.go  common.go  common_test.go  completion.go  connect.go  const.go  create.go  failover.go  gen.go  log.go  pack.go  repair.go  replicasets.go  start.go  status.go  stop.go  usage.go  validate.go  version.go
cli/common/: compress.go  crypto.go  execute.go  files.go  lua.go  result.go  socket.go  socket_test.go  tarantool.go  tarantool_test.go  utils.go  utils_test.go
cli/connect/: binary.go  common.go  connect.go  console.go  plain_text.go
cli/connector/: binary.go  connector.go  eval_plain_text.go  plain_text.go
cli/context/: context.go
cli/create/: create.go  git.go
cli/docker/: build.go  build_test.go  common.go  run.go
cli/failover/: common.go  disable.go  eventual.go  failover.go  manage.go  set.go  set_test.go  setup.go  setup_test.go  state.go  stateful.go  status.go  validate.go
cli/pack/: app_dir.go  common.go  common_test.go  deb.go  deb_control_dir.go  docker.go  pack.go  pack_test.go  rpm.go  systemd_dir.go  systemd_dir_test.go  tarantool_version.go  tarantool_version_test.go  tgz.go  tmp_dir.go  tmpfiles_dir.go  validate.go
cli/project/: common.go  dockerfiles.go  dockerfiles_test.go  files.go  files_test.go  project.go
cli/repair/: advertise_uri.go  app_configs.go  clusterwide_config.go  clusterwide_config_test.go  common.go  completion.go  completion_test.go  list.go  patch.go  remove.go  repair.go  (+2 more)
cmake/: FindTarantool.cmake
commands/: build.go  cartridge.go  create.go  pack.go  version.go
common/: execute.go  lua.go  utils.go
create/: create.go  git.go
debian/: .gitignore  changelog  control  rules
doc/: README.md  admin.rst  commands.rst  conf.py  connect.rst  crowdin.yaml  failover.rst  global-flags.rst  index.rst  installation.rst  instance-paths.rst  instance_paths.rst  instances_paths.rst  lifecycle.rst  migration-to-tt.rst  pre-post-build.rst  pre_post_build.rst  replicasets.rst  special_files.rst
pack/: app_dir.go  build_dir.go  common.go  distribution_dir.go  pack.go  tgz.go  tmp_dir.go
project/: project.go
rpm/: cartridge-cli.spec
src/: main.go
templates/: app_files.go  build_files.go  config_files.go  templates.go
test/: clusterwide_conf.py  conftest.py  helper.lua  project.py  requirements.txt  utils.py
tests/: end-to-end.sh  tarantoolapp_ignore_test.lua  tarantoolapp_pack.py
(+418 files in other folders)
